# leafy-bank-backend-capitalmarkets-agents

./: README.md  docker-compose.yml
backend/: agent_llm.py  agent_macro_indicators_definition.py  agent_macro_indicators_tools.py  agent_macro_indicators_workflow.py  api_asset_suggestions.py  api_charts.py  api_crypto_data.py  api_macro_indicators_data.py  api_market_assistant.py  api_market_data.py  api_portfolio_data.py  api_report_data.py  api_risk_profiles.py  api_scheduled_agents.py  api_stablecoins_market_cap.py  launcher.py  loader_service.py  main.py  pyproject.toml  scheduled_agents.py  service_asset_suggestions.py  service_chart_mappings.py  service_crypto_data.py  service_crypto_suggestions.py  service_financial_news_data.py  service_loader.py  service_macro_indicators_data.py  service_market_data.py  service_portfolio_data.py  service_report_data.py  service_stablecoins_market_cap_data.py  vector_store_mdb.py  vector_store_query.py
backend/agents/: agent_crypto_analysis_graph.py  agent_crypto_news_graph.py  agent_crypto_social_media_graph.py  agent_llm.py  agent_macro_indicators_chat_history.py  agent_macro_indicators_definition.py  agent_macro_indicators_node_definition.py  agent_macro_indicators_tools.py  agent_market_analysis_definition.py  agent_market_analysis_graph.py  agent_market_analysis_nodes.py  agent_market_analysis_workflow.py  agent_market_news_graph.py  agent_market_news_tools.py  agent_market_news_workflow.py  agent_market_social_media_graph.py  agent_market_volatility_chat_history.py  agent_market_volatility_definition.py  (+5 more)
(+52 files in other folders)
